vcluster-use-cases/flux/manifests/flux-notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
  - host: flux-webhook-alpha-480-4.us.demo.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
